Fixes #105 - line spacing of multi-line widget titles

--- a/style.css
+++ b/style.css
@@ -493,7 +493,6 @@ color:#fff;
 	margin: 0 14px 0 0;
 	background: white;
 	font-size: 1em;
-	line-height: 1.25em;
 }
 
 .home-left .view-footer{ margin:12px 0 0 0 }
@@ -561,7 +560,6 @@ padding-bottom: 10px;
 .home-right div.widget-container {
 	margin:0 0 6px 0;
 	font-size:1.0em;
-	line-height:1.5em;
 }
 .home-right div.widget-container a.post-title {
 	font-size: 1.167em;
